Fix CSS to remove horizontal overflow

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,12 @@
 body {
     background-color: black;
-    text-align: center;
+}
+
+#main {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #title {
@@ -32,7 +38,6 @@ p, li, h2 {
 ul {
     text-align: left;
     position: relative;
-    left: 30%;
 }
 
 li {
@@ -43,6 +48,7 @@ li {
     font-style: italic;
     position: relative;
     margin-top: auto;
+    text-align: center;
 }
 
 #tribute-info {
